@@ -3,8 +3,9 @@
   * Fix manpage errors
   * Use automake's "quieter builds" rule when available
 ==== GTK+ ====
-  * Fix 1.61 build failure on systems with new versions of glib but older versions of gtk
+  * Fix broken SIGINT (ctrl-c) handling
   * Fix tray menu's main window status when Transmission is started minimized
+  * Fix 1.61 build failure on systems with new versions of glib but older versions of gtk
 
 === Transmission 1.75 (2009/09/13) ===
 [http://trac.transmissionbt.com/query?milestone=1.75&group=component&groupdesc=1&order=severity All tickets closed by this release]
